--- a/HappyBox/HappyBox/ViewControllers/PhotorollViewController/CustomViews/PhotorollPreview/PhotorollPreview_iPad.xib
+++ b/HappyBox/HappyBox/ViewControllers/PhotorollViewController/CustomViews/PhotorollPreview/PhotorollPreview_iPad.xib
@@ -7,43 +7,67 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="270" id="f83-ad-doE" customClass="PhotorollPreview">
-            <rect key="frame" x="0.0" y="0.0" width="768" height="268"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="292" id="f83-ad-doE" customClass="PhotorollPreview">
+            <rect key="frame" x="0.0" y="0.0" width="1024" height="291"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="f83-ad-doE" id="E74-i2-tyX">
-                <rect key="frame" x="0.0" y="0.0" width="768" height="267"/>
+                <rect key="frame" x="0.0" y="0.0" width="1024" height="290"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" id="Mxa-zI-PWI">
-                        <rect key="frame" x="114" y="20" width="157" height="232"/>
+                        <rect key="frame" x="42" y="15" width="173" height="262"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="fZy-Y7-7ay">
-                                <rect key="frame" x="0.0" y="0.0" width="157" height="232"/>
+                            <imageView clipsSubviews="YES" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person-icon.png" id="fZy-Y7-7ay">
+                                <rect key="frame" x="0.0" y="0.0" width="173" height="262"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     </view>
-                    <view tag="1" contentMode="scaleToFill" id="BwK-sJ-Wbt">
-                        <rect key="frame" x="306" y="20" width="157" height="232"/>
+                    <view tag="1" contentMode="scaleToFill" id="5Sr-0g-67G">
+                        <rect key="frame" x="235" y="14" width="173" height="262"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="0F0-Pm-AnK">
-                                <rect key="frame" x="0.0" y="0.0" width="157" height="232"/>
+                            <imageView clipsSubviews="YES" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person-icon.png" id="eTT-Pc-lZc">
+                                <rect key="frame" x="0.0" y="0.0" width="173" height="262"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     </view>
-                    <view tag="2" contentMode="scaleToFill" id="5ZN-cw-jg0">
-                        <rect key="frame" x="498" y="20" width="157" height="232"/>
+                    <view tag="2" contentMode="scaleToFill" id="h0F-Ue-272">
+                        <rect key="frame" x="426" y="14" width="173" height="262"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="pmG-47-z2W">
-                                <rect key="frame" x="0.0" y="0.0" width="157" height="232"/>
+                            <imageView clipsSubviews="YES" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person-icon.png" id="mzV-u3-Wk9">
+                                <rect key="frame" x="0.0" y="0.0" width="173" height="262"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    </view>
+                    <view tag="3" contentMode="scaleToFill" id="aSQ-La-ads">
+                        <rect key="frame" x="619" y="14" width="173" height="262"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person-icon.png" id="Yu5-hO-zYr">
+                                <rect key="frame" x="0.0" y="0.0" width="173" height="262"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    </view>
+                    <view tag="4" contentMode="scaleToFill" id="C5J-52-LHm">
+                        <rect key="frame" x="812" y="14" width="173" height="262"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person-icon.png" id="H8w-q2-h65">
+                                <rect key="frame" x="0.0" y="0.0" width="173" height="262"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             </imageView>
                         </subviews>
@@ -55,13 +79,20 @@
             </tableViewCellContentView>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <connections>
-                <outletCollection property="containerViews" destination="Mxa-zI-PWI" id="Xuj-C9-VtE"/>
-                <outletCollection property="containerViews" destination="BwK-sJ-Wbt" id="y2Y-Ir-5c5"/>
-                <outletCollection property="containerViews" destination="5ZN-cw-jg0" id="8jv-28-T8p"/>
-                <outletCollection property="imageViewsImage" destination="fZy-Y7-7ay" id="BTC-t4-PDg"/>
-                <outletCollection property="imageViewsImage" destination="0F0-Pm-AnK" id="avl-nQ-b8i"/>
-                <outletCollection property="imageViewsImage" destination="pmG-47-z2W" id="SsI-tG-CSW"/>
+                <outletCollection property="containerViews" destination="Mxa-zI-PWI" id="f7C-XJ-Cic"/>
+                <outletCollection property="containerViews" destination="5Sr-0g-67G" id="hXS-Kz-BfI"/>
+                <outletCollection property="containerViews" destination="h0F-Ue-272" id="AHi-ef-JVa"/>
+                <outletCollection property="containerViews" destination="aSQ-La-ads" id="EUt-Lz-Gy4"/>
+                <outletCollection property="containerViews" destination="C5J-52-LHm" id="1YK-yg-fJg"/>
+                <outletCollection property="imageViewsImage" destination="fZy-Y7-7ay" id="6Bn-X1-Do3"/>
+                <outletCollection property="imageViewsImage" destination="eTT-Pc-lZc" id="jbH-pi-Yu2"/>
+                <outletCollection property="imageViewsImage" destination="mzV-u3-Wk9" id="scl-F4-Ble"/>
+                <outletCollection property="imageViewsImage" destination="Yu5-hO-zYr" id="AYu-hG-sF2"/>
+                <outletCollection property="imageViewsImage" destination="H8w-q2-h65" id="ZlH-qz-zFJ"/>
             </connections>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="person-icon.png" width="200" height="200"/>
+    </resources>
 </document>
