--- a/HappyBox/HappyBox/Main_iPad.storyboard
+++ b/HappyBox/HappyBox/Main_iPad.storyboard
@@ -54,6 +54,18 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                             </button>
+                            <view contentMode="scaleToFill" id="fUI-rR-FGD">
+                                <rect key="frame" x="0.0" y="741" width="1024" height="27"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="14 из 100" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="lXe-za-yY1">
+                                <rect key="frame" x="434" y="745" width="156" height="19"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                                <color key="textColor" red="0.25490196079999999" green="0.25490196079999999" blue="0.25490196079999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
@@ -64,7 +76,9 @@
                     <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
                     <connections>
                         <outlet property="buttonStatistics" destination="MP1-vT-0ng" id="gPC-Nr-tNX"/>
+                        <outlet property="labelProgress" destination="lXe-za-yY1" id="Ade-Kq-cAg"/>
                         <outlet property="tableViewPhotoroll" destination="f8i-9m-0fx" id="6De-PQ-f9n"/>
+                        <outlet property="viewContainerForProgress" destination="fUI-rR-FGD" id="fHZ-W7-K7p"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QwS-TS-ac3" userLabel="First Responder" sceneMemberID="firstResponder"/>
